--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -39,10 +39,6 @@
   margin-bottom: 10px;
 }
 
-.heart {
-  margin: 0 10px;
-}
-
 .comments {
   font-family: 'Kaushan Script', cursive;
 }
@@ -62,3 +58,39 @@ h4 {
   margin-top: 26px;
   
 }
+
+.heart {
+  margin: 0 auto; 
+  margin-left: 8%;
+  margin-top: -4%: 
+}
+
+.likes-heart{
+  opacity: 0;
+  /*padding: 8%;*/
+  transition: all 0.5s;
+  transform : translateX(-50%) translateY(-50%) scale(2);
+  display : block;
+  margin-left: 8%; 
+
+}
+
+.like-enter{
+  transition: all .2s;
+  opacity: 1;  
+  margin-left: 8%; 
+}
+
+.like-enter-active{
+  transform : translateX(-50%) translateY(-50%) scale(2);
+  margin-left: 8%; 
+}
+
+.like-leave-active{
+  margin-left: 8%; 
+  display: none;
+}
+    
+
+
+
