--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -62,12 +62,12 @@ h4 {
 .heart {
   margin: 0 auto; 
   margin-left: 8%;
-  margin-top: -4%: 
+  /*margin-top: -4%: */
 }
 
 .likes-heart{
   opacity: 0;
-  /*padding: 8%;*/
+  padding: 8%;
   transition: all 0.5s;
   transform : translateX(-50%) translateY(-50%) scale(2);
   display : block;
